# PCMM

./: .gitignore  Instruction.txt  PCMM.pro  README.md
sourceCode/: CMakeLists.txt
sourceCode/Algorithms/: .cproject
sourceCode/ChatMangement/: ChatManagementProcess.h  ChatMangementMain.cpp  ChatMgtConnectionAcceptor.cpp  ChatMgtConnectionAcceptor.h  ChatMgtConnectionReceiver.cpp  ChatMgtConnectionReceiver.h  ChatMgtControl.cpp  ChatMgtControl.h  Component.h  IChatMgtControl.h
sourceCode/ChatSessionManagement/: CMakeLists.txt  ChatManagementProcess.cpp  ChatMgtConnectionReceiver.h  ChatMgtControl.cpp  ChatMgtControl.h  IChatMgtControl.cpp
sourceCode/ChatSessionMessage/: CMakeLists.txt  ChatAuthorizationRequest.cpp  ChatAuthorizationRequest.h  ChatAuthorizationResponse.cpp  ChatAuthorizationResponse.h  ChatFileFragmentRequest.cpp  ChatFileFragmentRequest.h  ChatFileMessage.cpp  ChatFileMessage.h  ChatFileRequest.cpp  ChatFileRequest.h  ChatLoginRequest.cpp  ChatLoginRequest.h  ChatLoginResponse.cpp  ChatLoginResponse.h  ChatSessionMessageFactory.cpp  ChatSessionMessageFactory.h  ChatTextMessage.cpp  ChatTextMessage.h  IChatMessage.cpp  IChatMessage.h
sourceCode/ClusterManagement/: CMakeLists.txt  ClusterManagementProcess.cpp  ClusterMgtClientType.h  ClusterMgtClientsManagement.cpp  ClusterMgtClientsManagement.h  ClusterMgtConnectionAcceptor.cpp  ClusterMgtConnectionAcceptor.h  ClusterMgtConnectionReceiver.cpp  ClusterMgtConnectionReceiver.h  ClusterMgtController.cpp  ClusterMgtController.h  IClusterMgtClientsManagement.h  IClusterMgtController.cpp  IClusterMgtController.h
sourceCode/ClusterMgtMessage/: CMakeLists.txt  ClusterMgtBrieflyRequest.cpp  ClusterMgtBrieflyRequest.h  ClusterMgtBrieflyResponse.cpp  ClusterMgtBrieflyResponse.h  ClusterMgtMessageFactory.cpp  Component.h  IClusterMgtMessage.h
sourceCode/ClusterMgtMessageTest/: CMakeLists.txt  ClusterMgtBrieflyResponseMessage.cpp  ClusterMgtMessageFactoryTest.cpp
sourceCode/ClustersManagement/: ClusterConnectionAcceptor.cpp  ClusterConnectionAcceptor.h  ClustersManagementHandler.cpp  ClustersManagementHandler.h  ClustersMgtConnectionAcceptor.cpp  ClustersMgtConnectionAcceptor.h  ClustersMgtConnectionReceiver.cpp  ClustersMgtConnectionReceiver.h  IClustersManagementHandler.cpp  IClustersManagementHandler.h
sourceCode/Common/: AppConst.h  CMakeLists.txt  Encryption.cpp  Encryption.h  FilePathHandler.cpp  FilePathHandler.h  MessageBuffer.cpp  MessageBuffer.h  Number.cpp  Number.h  Random.cpp  Random.h  RemoveCharacter.cpp  RemoveCharacter.h  Singleton.h  Sleep.h  SystemTime.cpp  SystemTime.h  TimeStat.h  macro.h
sourceCode/Configure/: .cproject  Test.cpp  TraceLogConfigure.cpp
sourceCode/ConfigureManagement/: ManuiConfig.cpp  ManuiConfig.h  ManuiConfigFileMgt.cpp  ManuiConfigFileMgt.h  MauiConfig.cpp  MauiConfig.h  MauiConfigTag.cpp  MauiConfigTag.h  NetworkConfig.cpp  NetworkConfig.h
sourceCode/ConfigureMgtMessage/: MauiConfigurationAcquireResponse.h
sourceCode/ConfigureTest/: .cproject
sourceCode/Connection/: CMakeLists.txt  IConnection.cpp  IConnection.h  IConnectionRx.h
sourceCode/Core/: CMakeLists.txt  EventLoop.cpp  EventLoop.h  ICoreLoop.cpp  ICoreLoop.h  IoLoop.cpp  IoLoop.h  LoopMain.cpp  LoopMain.h  TimeLoop.cpp  TimeLoop.h
sourceCode/DeviceCommunication/: CMakeLists.txt  Component.h  DeviceClient.cpp  DeviceClient.h  DeviceClientManager.cpp  DeviceClientManager.h  DeviceConnectionAcceptor.cpp  DeviceConnectionAcceptor.h  DeviceConnectionReceiverCreator.cpp  DeviceConnectionReceiverCreator.h  DeviceServer.cpp  DeviceServer.h  DeviceServerCreator.cpp  DeviceServerCreator.h  DeviceType.h  IDeviceClient.cpp  IDeviceClient.h  IDeviceClientManager.cpp  IDeviceClientManager.h  IDeviceMessageHandler.cpp  IDeviceMessageHandler.h  IDeviceServer.cpp  IDeviceServer.h  IoeZpConnectionReceiver.cpp  IoeZpConnectionReceiver.h  IoeZpMessageHandler.cpp  IoeZpMessageHandler.h
sourceCode/DeviceMessage/: CMakeLists.txt  Component.h  DeviceMessageGenerator.cpp  DeviceMessageGenerator.h  DeviceMessageThreadSafeQueue.cpp  DeviceMessageThreadSafeQueue.h  DeviceMessageType.cpp  DeviceMessageType.h  IDeviceMessage.cpp  IDeviceMessage.h  IDeviceMessageQueue.cpp  IDeviceMessageQueue.h  IoeZpMessage.cpp  IoeZpMessage.h  IoeZpResource.cpp  IoeZpResource.h
sourceCode/Environment/: CMakeLists.txt  CpuInfo.cpp  CpuInfo.h  CpuInfoBriefly.cpp  CpuInfoBriefly.h  CpuInfoCollector.cpp  CpuInfoCollector.h  CpuUsage.cpp  CpuUsage.h  CpuUsageCalculator.cpp  CpuUsageCalculator.h  CpuUsageDataType.h  CpuUsageInfo.cpp  CpuUsageInfo.h  CpuUsageLinux.cpp  CpuUsageLinux.h  DeviceInfo.cpp  DeviceInfo.h  DiskUsageInfo.cpp  DiskUsageInfo.h  Environment.cpp  Environment.h  EnvironmentSystemInfomation.cpp  EnvironmentSystemInfomation.h  IShellCommand.cpp  IShellCommand.h  IoeZpDeviceInfo.cpp  IoeZpDeviceInfo.h  MemoryInfo.cpp  MemoryInfo.h  MemoryInfoBriefly.cpp  MemoryInfoBriefly.h  MemoryInfoDataType.cpp  MemoryInfoDataType.h  MemoryUsageInfo.cpp  MemoryUsageInfoDataType.h  MiscInfo.cpp  MiscInfo.h  MomeryUsageInfo.cpp  MomeryUsageInfo.h  (+19 more)
sourceCode/EnvironmentTest/: CMakeLists.txt  CpuInfoBrieflyTest.cpp  CpuUsageTest.cpp  EnvironmentTest.cpp  MemoryInfoBrieflyTest.cpp  SystemInfoBrieflyTest.cpp
sourceCode/EventHandler/: EventIdGenerator.cpp  EventIdGenerator.h  IEvent.cpp  IEvent.h  IEventQueue.cpp  IEventQueue.h  ListEventQueue.cpp  ListEventQueue.h
sourceCode/Io/: CMakeLists.txt  IIoControl.cpp  IIoControl.h  IIoEvent.cpp  IIoEvent.h  IoControlEvent.cpp  IoControlEvent.h  IoControlEventsHandler.cpp  IoControlEventsHandler.h  IoControlEventsHandlerEpoll.cpp  IoControlEventsHandlerEpoll.h
sourceCode/IoPlatformWrapper/: CMakeLists.txt  NetworkHost.cpp  NetworkHost.h  SocketWrapper.cpp  SocketWrapper.h  SocketWrapperDef.h  SystemErrorInfo.cpp  SystemErrorInfo.h
sourceCode/Ipc/: CMakeLists.txt  Component.h  IIpcClient.h  IIpcConnectionAcceptor.h  IIpcConnectionClientStrategy.h  IIpcConnectionStrategy.cpp  IIpcConnectionStrategy.h  IIpcMessage.cpp  IIpcMessage.h  IIpcServer.h  IpcClient.cpp  IpcClient.h  IpcClientCreator.cpp  (+12 more)
(+256 files in other folders)
