set(LIBs pthread)
set(SSH_LIBs ssh ssh_threads)	
set(TEST_LIBs ${LIBs} gtest gmock gtest_main gmock_main)
cmake_minimum_required (VERSION 2.6)
include(CheckCXXCompilerFlag)
	CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
	CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
if(COMPILER_SUPPORTS_CXX11)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
elseif(COMPILER_SUPPORTS_CXX0X)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
else()
    message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11
					support. Please use a different C++ compiler.")
endif()

	
add_subdirectory(Configure)
add_subdirectory(Common)
add_subdirectory(SshWrapper)
add_subdirectory(libssh_demo)
add_subdirectory(EventHandler)
add_subdirectory(TimeHandler)
add_subdirectory(Network)
add_subdirectory(Serialize)

#Unit test
add_subdirectory(ConfigureTest)
add_subdirectory(TraceLogTest)
add_subdirectory(SshWrapperTest)
add_subdirectory(SerializeTest)
